fixing sidebar width issue on safari

--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ body {
   overflow: hidden; }
 
 #sidebar {
-  width: 10.7rem;
+  width: 11rem;
   display: inline-flex; }
   #sidebar #account_chooser {
     margin: 0;
@@ -98,8 +98,8 @@ body {
     height: 100%;
     display: inline-block;
     vertical-align: top;
-    width: 4.5rem;
-    padding: 0 0.56rem; }
+    width: 4em;
+    padding: 0 5px; }
     #sidebar #account_chooser .item {
       border-radius: 5px;
       min-width: 3em;
@@ -129,13 +129,14 @@ body {
     margin: 0;
     background: #eaeaea;
     height: 100%;
-    width: 7rem;
+    width: 6.6em;
+    border: none;
     display: inline-block; }
     #sidebar #icon_tabs .item {
-      padding: 1rem;
+      padding: 1em;
       color: #7a418f; }
       #sidebar #icon_tabs .item .label {
-        top: 0.3rem;
+        top: 0.3em;
         left: 68%;
         background-color: #7a418f; }
       #sidebar #icon_tabs .item i {
